--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
                     </p>
                     <div class="btn-animacion mt-6 md:mt-2 flex justify-center md:justify-start">
                         <button class="btn-fondo">Más Información</button>
-                        <button class="btn">Más Información</button>
+                        <button class="btn"><a href="./pages/AboutUs.html">Más Información</a></button>
                     </div>
                 </div>
                 <img src="./img/Quetzal.jpg" class="md:w-5/12 md:inline hidden md:mt-2 xl:mt-8 mt-20">
@@ -131,9 +131,9 @@
         <div class="pt-4 md:pt-12 px-4 xl:px-24">
             <div class="grid grid-cols-1 md:grid-cols-12 gap-4 md:gap-8 items-start">
                 <div class="md:col-span-4 pt-8">
-                    <div class="flex justify-between pb-4">
+                    <div class="flex justify-between items-end pb-4">
                         <img src="./img/logo-claro.svg" class="h-16">
-                        <img src="./img/github.svg">
+                        <img src="./img/logo-grupo.svg">
                     </div>
                     <p class="text-sm">
                         Tlaloc es un sitio web creado por bitJAKE con el objetivo de soltar nuestro granito de arena al
@@ -188,7 +188,6 @@
         </div>
     </footer>
     <script src="./js/funcionalidades.js"></script>
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 </body>
 
 </html>
