--- a/src/pages/Eventos-individuales.html
+++ b/src/pages/Eventos-individuales.html
@@ -55,15 +55,15 @@
         <div class="md:col-span-1 mt-8 md:hidden">
             <div class="flex items-center mb-8 w-full justify-center">
                 <img src="../img/fecha.svg">
-                <p id="fecha" class="ml-2"></p>
+                <p class="fecha" class="ml-2"></p>
             </div>
             <div class="flex items-center mb-8 w-full justify-center">
                 <img src="../img/hora.svg">
-                <p id="hora" class="ml-2"></p>
+                <p class="hora" class="ml-2"></p>
             </div>
             <div class="flex items-center mb-8 w-full justify-center">
                 <img src="../img/Ubicacion.svg">
-                <p id="ubicacion" class="ml-2"></p>
+                <p class="ubicacion" class="ml-2"></p>
             </div>
         </div>
         <section class="md:grid md:grid-cols-4 mb-16">
@@ -75,7 +75,7 @@
                         <img src="../img/fecha.svg">
                     </div>
                     <div class="col-span-10">
-                        <p id="fecha" class="ml-2"></p>
+                        <p class="fecha" class="ml-2"></p>
                     </div>
                 </div>
                 <div class="grid grid-cols-12 items-center mb-8">
@@ -83,7 +83,7 @@
                         <img src="../img/hora.svg">
                     </div>
                     <div class="col-span-10">
-                        <p id="hora" class="ml-2"></p>
+                        <p class="hora" class="ml-2"></p>
                     </div>
                 </div>
                 <div class="grid grid-cols-12 items-center mb-8">
@@ -91,7 +91,7 @@
                         <img src="../img/Ubicacion.svg">
                     </div>
                     <div class="col-span-10">
-                        <p id="ubicacion" class="ml-2"></p>
+                        <p class="ubicacion" class="ml-2"></p>
                     </div>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                 <div class="md:col-span-4 pt-8">
                     <div class="flex justify-between pb-4">
                         <img src="../img/logo-claro.svg" class="h-16">
-                        <img src="../img/github.svg">
+                        <img src="../img/logo-grupo.svg">
                     </div>
                     <p class="text-sm">
                         Tlaloc es un sitio web creado por bitJAKE con el objetivo de soltar nuestro granito de arena al
