--- a/src/pages/Eventos.html
+++ b/src/pages/Eventos.html
@@ -57,7 +57,7 @@
                 <div class="md:col-span-4 pt-8">
                     <div class="flex justify-between pb-4">
                         <img src="../img/logo-claro.svg" class="h-16">
-                        <img src="../img/github.svg">
+                        <img src="../img/logo-grupo.svg">
                     </div>
                     <p class="text-sm">
                         Tlaloc es un sitio web creado por bitJAKE con el objetivo de soltar nuestro granito de arena al
