--- a/src/pages/Eventos.html
+++ b/src/pages/Eventos.html
@@ -32,10 +32,10 @@
                             <li class="nav-item mx-2">Blog</li>
                         </a>
                         <a href="./Eventos.html">
-                            <li class="nav-item mx-2">Eventos</li>
+                            <li class="nav-item mx-2 nav-item-active">Eventos</li>
                         </a>
                         <a href="./Productos.html">
-                            <li class="nav-item mx-2 nav-item-active">Productos Eco</li>
+                            <li class="nav-item mx-2">Productos Eco</li>
                         </a>
                         <a href="./AboutUs.html">
                             <li class="nav-item ml-2">Acerca de</li>
