Arreglo de interfaz

--- a/src/index.html
+++ b/src/index.html
@@ -74,12 +74,11 @@
                         la página para que los amantes de la naturaleza puedan compartir diversa
                         información, datos importantes, datos curiosos o de su creatividad, sobre la naturaleza.
                     </p>
-                    <div class="link flex mt-4 md:justify-start justify-center">
-                        <a href="./pages/Blog.html">Empieza a leernos</a>
+                    <a href="./pages/Blog.html" class="link flex mt-4 md:justify-start justify-center">Empieza a leernos
                         <span class="material-symbols-outlined">
                             arrow_forward_ios
                         </span>
-                    </div>
+                    </a>
                 </div>
             </section>
             <section class="md:flex mb-2 items-center">
@@ -93,12 +92,12 @@
                         ambiente y así lograras que
                         muchas personas te apoyen y se unan a tu idea.
                     </p>
-                    <div class="link flex mt-4 md:justify-start justify-center">
-                        <a href="./pages/Eventos.html">Empieza a descubrirlos</a>
+                    <a href="./pages/Eventos.html" class="link flex mt-4 md:justify-start justify-center">Empieza a
+                        descubrirlos
                         <span class="material-symbols-outlined">
                             arrow_forward_ios
                         </span>
-                    </div>
+                    </a>
                 </div>
                 <img src="./img/Eventos-Ambientales.svg" class="md:w-5/12 md:mt-2 mt-4">
             </section>
@@ -117,12 +116,12 @@
                         que ellos se den a conocer
                         y todos los interesados puedan recurrir en busca de su producto o servicio.
                     </p>
-                    <div class="link flex mt-4 md:justify-start justify-center">
-                        <a href="./pages/Productos.html">Empieza a comprarlos</a>
+                    <a href="./pages/Productos.html" class="link flex mt-4 md:justify-start justify-center">Empieza a
+                        comprarlos
                         <span class="material-symbols-outlined">
                             arrow_forward_ios
                         </span>
-                    </div>
+                    </a>
                 </div>
             </section>
         </div>
@@ -133,7 +132,7 @@
                 <div class="md:col-span-4 pt-8">
                     <div class="flex justify-between items-end pb-4">
                         <img src="./img/logo-claro.svg" class="h-16">
-                        <img src="./img/logo-grupo.svg">
+                        <a href="https://github.com/BitJAKE" target="_blank"><img src="./img/logo-grupo.svg"></a>
                     </div>
                     <p class="text-sm">
                         Tlaloc es un sitio web creado por bitJAKE con el objetivo de soltar nuestro granito de arena al
