--- a/src/pages/AboutUs.html
+++ b/src/pages/AboutUs.html
@@ -150,7 +150,7 @@
                 <div class="md:col-span-4 pt-8">
                     <div class="flex justify-between pb-4">
                         <img src="../img/logo-claro.svg" class="h-16">
-                        <img src="../img/logo-grupo.svg">
+                        <a href="https://github.com/BitJAKE" target="_blank"><img src="../img/logo-grupo.svg"></a>
                     </div>
                     <p class="text-sm">
                         Tlaloc es un sitio web creado por bitJAKE con el objetivo de soltar nuestro granito de arena al
