cambios en ortogafria

--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
                         cambios, pero si se unen muchas personas para llegar a un mismo fin se disfruta más y se tienen
                         más posibilidades de
                         lograrse. Acá podrás comunicar sobre cualquier evento o actividad que beneficie al medio
-                        ambiente y así lograras que
+                        ambiente y así lograrás que
                         muchas personas te apoyen y se unan a tu idea.
                     </p>
                     <a href="./pages/Eventos.html" class="link flex mt-4 md:justify-start justify-center">Empieza a
@@ -135,7 +135,7 @@
                         <a href="https://github.com/BitJAKE" target="_blank"><img src="./img/logo-grupo.svg"></a>
                     </div>
                     <p class="text-sm">
-                        Tlaloc es un sitio web creado por bitJAKE con el objetivo de soltar nuestro granito de arena al
+                        Tlaloc es un sitio web creado por bitJAKE con el objetivo de aportar nuestro granito de arena al
                         combate
                         actual para
                         salvar al medio ambiente en Quetzaltenango (por ahora)
