--- a/src/pages/AboutUs.html
+++ b/src/pages/AboutUs.html
@@ -53,7 +53,7 @@
             </div>
             <p class="text-center mx-4 md:mx-36">
                 Somos estudiantes de la Universidad Rafael Landívar de Quetzaltenango, actualmente cursamos
-                por el ultimo
+                por el último
                 tramo de
                 nuestra aventura por la carrera de Ingeniería en Informática y Sistemas, alistándonos para que, en muy
                 poco tiempo,
@@ -68,29 +68,29 @@
                 <a href="https://github.com/Rafterminador" target="_blank">
                     <div class="flex flex-col items-center">
                         <img src="../img/Fernando.svg">
-                        <p class="texto-alterno text-center">Fernando Juarez</p>
-                        <p>Front-end Developer</p>
+                        <p class="texto-alterno text-center">Fernando Juárez</p>
+                        <p class="text-center">Front-end Developer</p>
                     </div>
                 </a>
                 <a href="https://github.com/Allecan" target="_blank">
                     <div class="flex flex-col items-center">
                         <img src="../img/Kelvin.svg">
                         <p class="texto-alterno text-center">Kelvin Cano</p>
-                        <p>UI Developer</p>
+                        <p class="text-center">UI Developer</p>
                     </div>
                 </a>
                 <a href="https://github.com/ZoilaSanchez" target="_blank">
                     <div class="flex flex-col items-center">
                         <img src="../img/Zoili.svg">
-                        <p class="texto-alterno text-center">Zoila Sanchez</p>
-                        <p>Back-end Developer</p>
+                        <p class="texto-alterno text-center">Zoila Sánchez</p>
+                        <p class="text-center">Back-end Developer</p>
                     </div>
                 </a>
                 <a href="https://github.com/AGMH16" target="_blank">
                     <div class="flex flex-col items-center">
                         <img src="../img/Guadaluper.svg">
                         <p class="texto-alterno">Andrea Morales</p>
-                        <p>Back-end Developer</p>
+                        <p class="text-center">Back-end Developer</p>
                     </div>
                 </a>
             </div>
@@ -129,12 +129,12 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center mb-8">
                 <div class="mr-8">
                     <p class="text-center md:text-left">
-                        Este sitio esta destinado para cualquier persona que desea familiarizarse con el medio ambiente
+                        Este sitio está destinado para cualquier persona que desea familiarizarse con el medio ambiente
                         que
                         nos rodea gracias a
-                        que ofrecemos informacion mediante nuestro blog ambiental, dar a conocer posibles eventos
+                        que ofrecemos información mediante nuestro blog ambiental, dar a conocer posibles eventos
                         ambientales y promover la
-                        venta de productos ecologicos en la ciudad de Quetzaltenango
+                        venta de productos ecológicos en la ciudad de Quetzaltenango
                     </p>
                 </div>
                 <div>
@@ -153,7 +153,7 @@
                         <a href="https://github.com/BitJAKE" target="_blank"><img src="../img/logo-grupo.svg"></a>
                     </div>
                     <p class="text-sm">
-                        Tlaloc es un sitio web creado por bitJAKE con el objetivo de soltar nuestro granito de arena al
+                        Tlaloc es un sitio web creado por bitJAKE con el objetivo de aportar nuestro granito de arena al
                         combate
                         actual para
                         salvar al medio ambiente en Quetzaltenango (por ahora)
