--- a/src/pages/Productos.html
+++ b/src/pages/Productos.html
@@ -59,7 +59,7 @@
                         <a href="https://github.com/BitJAKE" target="_blank"><img src="../img/logo-grupo.svg"></a>
                     </div>
                     <p class="text-sm">
-                        Tlaloc es un sitio web creado por bitJAKE con el objetivo de soltar nuestro granito de arena al
+                        Tlaloc es un sitio web creado por bitJAKE con el objetivo de aportar nuestro granito de arena al
                         combate
                         actual para
                         salvar al medio ambiente en Quetzaltenango (por ahora)
