--- a/src/pages/Eventos.html
+++ b/src/pages/Eventos.html
@@ -55,7 +55,7 @@
         <div class="pt-4 md:pt-12 px-4 xl:px-24">
             <div class="grid grid-cols-1 md:grid-cols-12 gap-4 md:gap-8 items-start">
                 <div class="md:col-span-4 pt-8">
-                    <div class="flex justify-between pb-4">
+                    <div class="flex justify-between items-end pb-4">
                         <img src="../img/logo-claro.svg" class="h-16">
                         <a href="https://github.com/BitJAKE" target="_blank"><img src="../img/logo-grupo.svg"></a>
                     </div>
