Implementacion de informacion en el area del footer

--- a/src/pages/AboutUs.html
+++ b/src/pages/AboutUs.html
@@ -153,11 +153,18 @@
                         <a href="https://github.com/BitJAKE" target="_blank"><img src="../img/logo-grupo.svg"></a>
                     </div>
                     <p class="text-sm">
-                        Tlaloc es un sitio web creado por bitJAKE con el objetivo de aportar nuestro granito de arena al
+                        Tlaloc es un sitio web creado por <A HREF="https://github.com/BitJAKE" target="_blank">BitJAKE </A>
+                        con el objetivo de aportar nuestro granito de arena al
                         combate
                         actual para
                         salvar al medio ambiente en Quetzaltenango (por ahora)
                     </p>
+                    <br> 
+                        <p class="text-sm">
+                            <A HREF="https://github.com/BitJAKE" target="_blank">BitJAKE </A>
+                         es una Organizacion creada por estudiantes de Ingeniería en Informática y Sistemas del 
+                        Campus San Alberto Hurtado, S. J. de Quetzaltenango
+                        </p>
                 </div>
                 <div class="md:col-span-5 md:ml-8">
                     <h4 class="text-center text-lg md:pr-6 pr-8 md:pl-12 xl:pl-4 pt-4 md:pt-0">Contacto</h4>
