--- a/src/pages/Productos.html
+++ b/src/pages/Productos.html
@@ -59,10 +59,17 @@
                         <a href="https://github.com/BitJAKE" target="_blank"><img src="../img/logo-grupo.svg"></a>
                     </div>
                     <p class="text-sm">
-                        Tlaloc es un sitio web creado por bitJAKE con el objetivo de aportar nuestro granito de arena al
+                        Tlaloc es un sitio web creado por <A HREF="https://github.com/BitJAKE" target="_blank">BitJAKE </A>
+                        con el objetivo de aportar nuestro granito de arena al
                         combate
                         actual para
-                        salvar al medio ambiente en Quetzaltenango (por ahora)
+                        salvar al medio ambiente en Quetzaltenango (por ahora).
+                        <br> <br>
+                        <p class="text-sm">
+                            <A HREF="https://github.com/BitJAKE" target="_blank">BitJAKE </A>
+                         es una Organizacion creada por estudiantes de Ingeniería en Informática y Sistemas del 
+                        Campus San Alberto Hurtado, S. J. de Quetzaltenango
+                        </p>
                     </p>
                 </div>
                 <div class="md:col-span-5 md:ml-8">
